updated license info

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       </p>
 
       <h3>License</h3>
-      <p>Open Font License without reserved font name. Feel free to modify and use for both commercial and private projects. A mention somewhere in your product isn't needed but much appreciated. <a href="https://github.com/gidole/Gidole-Typefaces/blob/master/Resources/GidoleFont/License.txt">License.txt</a></p>
+      <p>Open Font License without reserved font name - <a href="https://github.com/gidole/Gidole-Typefaces/blob/master/Resources/GidoleFont/License.txt">license.txt</a>. You're free to modify and use it for both commercial and private projects. A mention somewhere in your product isn't needed but much appreciated.</p>
         
       <h3>The End</h3>
       <p>I'll post major updates on <a target="_blank" href="https://twitter.com/intent/follow?screen_name=andreaslarsendk">Twitter</a> where you can also contact me with questions.<br>
