--- a/index.html
+++ b/index.html
@@ -39,17 +39,9 @@
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">    
     
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="js/combi.js"></script>
     <script>
       $(document).ready(function () {
-
-        $("#sticky").sticky({
-          topSpacing:-33,
-          getWidthFrom:"body",
-          responsiveWidth:true
-        });    
 
         $(document).keyup(function(e) {
           if (e.keyCode == 27) { 
@@ -58,26 +50,17 @@
           }
         });
 
-        $('.toggle').toggles({
-          text: {
-            on: '',
-            off: ''
-          },
-          animate: '300',
-          transition: 'ease',
-        });
-
-        $('#darktoggle').on('toggle', function() {
-          $("html").addClass("fadewhite").delay(500).queue(function(){
+        $('#darktoggle').on('click touchstart', function() {
+          $("html").addClass("fadewhite").delay(0).queue(function(){
             $("html").toggleClass("dark").removeClass("fadewhite").dequeue();
           });
         });
-        $("#typetoggle").on('toggle', function() {
+        $("#typetoggle").on('click touchstart', function() {
           $("html").addClass("fade").delay(500).queue(function(){
             $(this).toggleClass("Play").removeClass("fade").dequeue();
           });
         });
-        $("#trackingtoggle").on('toggle', function() {
+        $("#trackingtoggle").on('click touchstart', function() {
           $("html").toggleClass("trackingtest");
         });
 
@@ -135,16 +118,7 @@
     <header class="jumbotron">
         <h1 class="text-center">
           <div id="title">Gidole</div>
-<!--          <div id="tag">&amp; Gidolinya</div>-->
-          <div id="tag" class="cd-headline rotate-1">
-			<span class="cd-words-wrapper">
-				<b class="is-visible">&amp; Gidolinya</b>
-				<b>100% Free</b>
-				<b>Open Source</b>
-                <b>Modern DIN</b>
-			</span>
-		  </h1>
-
+          <div id="tag">&amp; Gidolinya</div>
         </h1>
     </header >
     <nav class="social text-center" id="sticky">
@@ -205,10 +179,12 @@
 
       <div id="playground">
         <h3>Playground</h3>
-          <div class="toggle" id="darktoggle"></div><span>White on dark</span><br>
-          <div class="toggle" id="typetoggle"></div><span>Gidolinya typeface</span><br>
-          <div class="toggle" id="trackingtoggle"></div><span>Disable tracking</span><br>
-          <span>Testdrive the font by editting anything in the "Characters" section.</span>
+          <p>
+            <input type="checkbox" id="darktoggle" /><label for="darktoggle"><span class="ui"></span>White on dark</label><br>
+            <input type="checkbox" id="typetoggle" /><label for="typetoggle"><span class="ui"></span>Gidolinya typeface</label><br>
+            <input type="checkbox" id="trackingtoggle" /><label for="trackingtoggle"><span class="ui"></span>Disable tracking</label><br>
+          Testdrive the font by editting anything in the "Characters" section.
+          </p>
       </div>        
       <div contenteditable="true">
         <h3>Characters</h3>
@@ -253,10 +229,10 @@
 
     <div id="downloaded" class="overlay">
       <div class="wrapper" id="dlthanks">
-        <h2>Thank me</h2>
+        <h2>Get karma</h2>
         <p>Donate to the Ethiopian Red Cross Society (ERCS)<br>
-          Tell your friends, like on Github &amp; Behance<br>
-          Follow me for updates<br>
+          Tell your friends, like on Github &amp; Behance and follow me for updates<br>
+          Thanks,<br>
           Andreas
         </p>
       </div>
