one append, not on append

--- a/index.html
+++ b/index.html
@@ -98,16 +98,18 @@
         $('.jumbotron').addClass('loaded');
         $('.slideimg').append('<img id="simplethumb" src="img/GidoleMinimalSmall.png" /><img id="smooththumb" src="img/GidoleSmoothSmall.png" /><img id="legiblethumb" src="img/GidoleLegibleSmall.png" />');        
         $('#simplethumb').on('click touchstart', function() {
-          $('#simple').append('<div><img src="img/GidoleMinimal.png"></div>');
           $("#simple").toggleClass("visible");
         });
         $('#smooththumb').on('click touchstart', function() {
-          $('#smooth').append('<div><img src="img/GidoleSmooth.png"></div>');
           $("#smooth").toggleClass("visible");          
         });
         $('#legiblethumb').on('click touchstart', function() {
-          $('#legible').append('<div><img src="img/GidoleLegible.jpg"></div>');
           $("#legible").toggleClass("visible");
+        });
+        $('.slideimg').one('click touchstart', function() {
+          $('#simple').append('<div><img src="img/GidoleMinimal.png"></div>');
+          $('#smooth').append('<div><img src="img/GidoleSmooth.png"></div>');
+          $('#legible').append('<div><img src="img/GidoleLegible.jpg"></div>');
         });
       });                       
     </script>      
