--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">    
     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="js/fittext.js"></script>
+    <script src=" //ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
+<!--    <script src="js/fittext.js"></script>-->
     <script>
       $(window).load(function () {
         $('.jumbotron').addClass('loaded');
@@ -154,7 +155,7 @@
 
       
       <h3>Guidelines</h3>
-      <p>I recommend you increase and decrease the tracking for body text and big headlines, respectively.</p>
+      <p>I recommend you increase and decrease the tracking for body text and big headlines, respectively. Subset the font if you are using it for web to reduce file size.</p>
 
       <div id="playground">
         <h3>Playground</h3>
