--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           Testdrive the font by editting anything in the "Characters" section.
           </p>
       </div>        
-      <div contenteditable="true">
+      <div contenteditable="true" spellcheck="false">
         <h3>Characters</h3>
         <p>Some of the >500 characters are shown below</p>
         <p class="charmap">
