--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           Testdrive the font by editting anything in the "Characters" section.
           </p>
       </div>        
-      <div contenteditable="true" spellcheck="false">
+      <div contenteditable="true" spellcheck="false"so>
         <h3>Characters</h3>
         <p>Some of the >500 characters are shown below</p>
         <p class="charmap">
@@ -209,6 +209,12 @@
 
     
     </main>
+
+    <div class="overlay visible">
+      <div class="wrapper">
+        <p>I'm currently working on a major revamp. Follow me to get notified about updates. Click to hide.</p>
+      </div>
+    </div>
 
     <div id="downloaded" class="overlay">
       <div class="wrapper" id="dlthanks">
