--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
     <div class="overlay visible">
       <div class="wrapper">
-        <p>I'm currently working on a major revamp. <a href="https://twitter.com/intent/follow?screen_name=andreaslarsendk" target="_blank">Follow</a> me to get notified about updates. I made <a href="img/gidole-a-poster.svg">this</a> poster to show how the |a| was designed. Click anywhere else to hide this message.</p>
+        <p>I'm currently working on a major revamp. <a href="https://twitter.com/intent/follow?screen_name=andreaslarsendk" target="_blank">Follow</a> me to get notified about updates. Click anywhere else to hide this message.</p>
       </div>
     </div>
 
