--- a/demo/index.html
+++ b/demo/index.html
@@ -324,7 +324,7 @@
     <div class="wrap" data-900="opacity[quadratic]:0" data-1200="opacity[quadratic]:1" data-1800="opacity[quadratic]:0;">
       <p>Gidole is a beautiful mountain town in southern Ethiopia. I lived there as a child - hence the name of the typeface.</p>
     </div>
-    <div id="world" class="behind" data-900="opacity[quadratic]:.5;transform[quadratic]:scale(0.3)" data-1400="opacity[quadratic]:1;transform[quadratic]:scale(.6)" data-1800="opacity[quadratic]:0;transform[quadratic]:scale(2)">>
+    <div id="world" class="behind" data-900="opacity[quadratic]:.5;transform[quadratic]:scale(0.3)" data-1400="opacity[quadratic]:1;transform[quadratic]:scale(.6)" data-1800="opacity[quadratic]:0;transform[quadratic]:scale(2)">
       <div id="worldcenter">
         ....................................................................................................................................................................................................................................................................................................................................................................................................................<br>
         ....................................................................................................................................................................................................................................................................................................................................................................................................................<br>
