--- a/demo/index.html
+++ b/demo/index.html
@@ -507,7 +507,7 @@
     
     
     <div class="wrap" data-6200="opacity[quadratic]:0" data-6400="opacity[quadratic]:1" data-8000="opacity[quadratic]:0;">
-      <p>The end - have you got any other ideas for animations and maybe how to fix the world map background so it isn't cut of in the top and bottom?</p>
+      <p>The end - have you got any other ideas for animations? <a href="http://www.reddit.com/r/web_design/comments/2ysih7/any_web_examples_of_cool_text_animation/" style="text-decoration:underline;pointer-events:all;">Reddit</a> thread.</p>
     </div>
 
   </body>
