--- a/demo/index.html
+++ b/demo/index.html
@@ -313,16 +313,12 @@
             <a href="#">Pinterest</a>
           </div>
         </div>
-        <div id="me">
-          <div><span>Me</span></div>
-          <div class="links">
-            <a href="#">Twitter</a>
-            <a href="#">Behance</a>
-            </div>
-        </div>
     </nav>
     <div class="wrap" data-900="opacity[quadratic]:0" data-1200="opacity[quadratic]:1" data-1800="opacity[quadratic]:0;">
-      <p>Gidole is a beautiful mountain town in southern Ethiopia. I lived there as a child - hence the name of the typeface.</p>
+      <div>
+      <h2>Gidole</h2>
+      <p>Gidole is named after a beautiful mountain town in southern Ethiopia where I lived there as a child.</p>
+        </div>
     </div>
     <div id="world" class="behind" data-900="opacity[quadratic]:.5;transform[quadratic]:scale(0.3)" data-1400="opacity[quadratic]:1;transform[quadratic]:scale(.6)" data-1800="opacity[quadratic]:0;transform[quadratic]:scale(2)">
       <div id="worldcenter">
