--- a/demo/index.html
+++ b/demo/index.html
@@ -404,7 +404,7 @@
     <div class="wrap" data-1800="opacity[quadratic]:0" data-2200="opacity[quadratic]:1" data-2600="opacity[quadratic]:0;">
       <div>
         <h2>Design</h2>
-        <p>Circular guidelines gives it a geometric &amp; minimal feel and Euler spirals irons out all the curve to tangent transitions.</p>
+        <p>Circular guidelines gives it a geometric &amp; minimal feel. Euler spirals irons out all the curve to tangent transitions.</p>
       </div>  
     </div>
 
