--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Gidole Open Source Modern DIN</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Gidole Open Source Modern DIN. A minimal, narrow and yet friendly typeface by @andreaslarsendk." />
+    <meta name="description" content="Gidole Open Source Modern DIN. A minimal, narrow and yet friendly typeface by @andreaslarsendk" />
     <meta name="author" content="@andreaslarsendk" />
     <meta name="keywords" content="Gidole, Open Source, Typeface, Font, Free"
     
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Gidole Open Source Modern DIN">
-    <meta itemprop="description" content="Gidole Open Source Modern DIN. A minimal, narrow and yet friendly typeface by @andreaslarsendk.">
+    <meta itemprop="description" content="Gidole Open Source Modern DIN. A minimal, narrow and yet friendly typeface by @andreaslarsendk">
     <meta itemprop="image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndin.png">
 
     <!-- Twitter Card data -->  
@@ -29,7 +29,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://gidole.github.io" />
     <meta property="og:image" content="https://raw.githubusercontent.com/gidole/gidole.github.io/master/img/gidoleopensourcemoderndinface.png" />
-    <meta property="og:description" content="Gidole Open Source Modern DIN. A minimal, narrow and yet friendly typeface by @andreaslarsendk." />
+    <meta property="og:description" content="Gidole Open Source Modern DIN. A minimal, narrow and yet friendly typeface by @andreaslarsendk" />
     <meta property="og:site_name" content="Gidole Open Source Modern DIN" />    
     
     <link rel="stylesheet" href="css/main.css">
