--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
     </div>
 
     <!-- &stroke -->            
-    <div id="stroke" data-4600="opacity[cubic]:0" data-4601="opacity[cubic]:1" data-5399="opacity[cubic]:1" data-5400="opacity[cubic]:0">
+    <div id="stroke" data-4400="opacity[cubic]:0" data-4401="opacity[cubic]:1" data-5399="opacity[cubic]:1" data-5400="opacity[cubic]:0">
       <svg id="ampstroke" viewBox="0 0 2600 4700">
         <path 
           stroke-dasharray="6630"
-          data-4600="@stroke-dashoffset:7680"    
-          data-5400="@stroke-dashoffset:13360"
+          data-4400="@stroke-dashoffset[inkvart]:7680"    
+          data-5400="@stroke-dashoffset[outkvart]:13360"
           d="M2647.28,3399.77C2044.08,3349.28 1856.93,3137.14 1711.28,2942.17C1540.18,2714.46 1372.83,2491.43 1166.48,2214.17C1132.88,2169.58 1098.48,2117.03 1098.48,2043.77C1098.48,1927.77 1181.68,1851.77 1290.48,1851.77C1399.28,1851.77 1482.48,1926.17 1482.48,2043.77C1482.48,2147.35 1418.29,2200.45 1363.28,2238.97C1292.08,2291.3 1220.88,2341.05 1149.68,2390.17C1082.95,2437.79 992.881,2504.93 992.881,2646.97C992.881,2800.57 1112.88,2902.97 1273.68,2902.97C1411.28,2902.97 1484.88,2837.37 1549.68,2765.37C1600.73,2708.75 1652.85,2651.03 1708.08,2590.17C1852.41,2430.53 2072.08,2223.77 2647.28,2380.57L2647.28,3399.77Z"></path>
       </svg>
     </div>  
