better mobile performance

--- a/index.html
+++ b/index.html
@@ -93,50 +93,52 @@
         <br>It's my first font and I couldn't have made it without help from great people at <a target="_blank" href="http://typophile.com/node/121996">typophile</a> and <a target="_blank" href="http://www.reddit.com/r/typography/comments/2uz4k7/gidole_gidole_play_can_now_both_be_downloaded/">r/typography</a>.</p>
         </div>
     </div>
-    <div id="world" class="behind" data-0="opacity[quadratic]:0;" data-600="opacity[quadratic]:1;" data-1200="transform[inoverkvart]:scale(0.4);opacity[quadratic]:1;" data-1700="opacity:0;transform:scale(1)">
+    <div id="world" class="behind" data-0="opacity[quadratic]:0;" data-600="opacity[quadratic]:1;" data-1200="transform[inoverkvart]:scale(1);opacity[quadratic]:1;" data-1700="opacity:0;transform:scale(3)">
       <div id="worldcenter">
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        .................................8480;[%867¿##########&}@8&.......&,778.......-.#,....-....8##;.................................<br>
-        ........................:::7,7.;:#;!8(&......4########!;8......................-6&...-,-@::,-;,..,-.............................<br>
-        ...........:#777#8888#&&777&;##&7#787&##8&7-..&%###&(6.............-#8;-&:77777#87788888888778877778888#78877777&;..............<br>
-        ...........7777777(;#8#@&&&&#:....:8&.;....;84..............;78#;:7::#877777877##:&8#&777777777777777787777#;77##-..............<br>
-        ............&........:7#87877##78##&:.&##&&#;...............#;7..&78:766;7;7767677;766;;;77777777#7776777:-....&6-..............<br>
-        .......................,&787&&;&&8&:&77888&,-8-...............76&777676&;76666&;##8##&;;&;68077;66;&6;&6778,...,................<br>
-        ........................&6&&7;;;66;76666#...................7;#&..-7;767.:-.76;7§[}48;;68844[(0(;;0&&678..,#....................<br>
-        .........................64#8#;;;7;6;6;......................780(;&.....-&0!}80#(((;876(;00848;#;6&&#.8;:8&.....................<br>
-        ..........................-&6;8;6:&.;#.....................:;[¿!%¿!}§##&%0}%%@6;0;[[((0&##;7677666&;;,..........................<br>
-        .............................;6;#...,#8:.................8%§!(§%%%¿¿!!¿§@[;;¿@#@[7..80##&8##&&;&#&6;:...........................<br>
-        ...............................-&#;7;....................,;;[%!}}¿&#@¿%@!(;-8%!#......&8;...;8;#7...#...........................<br>
-        ....................................7,;7;7##..............7&;;#8##88#8##8<span id="dot">·</span>86;0}.......:&.....#.8;...;&-.........................<br>
-        ......................................#;6777777..................;6;7677&;&;;;.......,.......;&:..87............................<br>
-        .....................................&77777778766:&...............#777787767..................-6;;&&&.,;#&#&,...................<br>
-        ......................................7777777676777;...............78887877;......................-;;;,..,-7;:..;,..............<br>
-        .......................................;#7777777777...............#67778777:.#;......................;7677,7:......,............<br>
-        .........................................067777777.................#;&&677..;7..,.................;66;667;##68....-.............<br>
-        ........................................8&77777#....................#8667.........................-6777774;8778.................<br>
-        ........................................87777&......................-:-............................&-....;;768..................<br>
-        ........................................77#;................................................................,;..................<br>
-        .......................................;87-.....................................................................................<br>
-        ........................................88-........;............................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
-        ................................................................................................................................<br>
+...........................................<br>
+................···········................<br>
+.............@@···············.............<br>
+...........@@@·········@@@@@@···...........<br>
+.........@@@·@@·······@@@·@@@·@@··.........<br>
+........@@@··········@@@@·@@@@@@@@@........<br>
+.......·@@········@···@@@··@@@@@@@@@.......<br>
+......··@@·······@@···@···@@@@@@@@@@@......<br>
+.....@··········@·@@·@@@@@@@@@@@@@@@@@.....<br>
+.....··············@@@@@@@@@@@@@@@@@@@.....<br>
+....@··············@@@@@@@@@@@@@@@@@@@@....<br>
+...@@@·············@@@·@·@@@@··@@@·@@@@@...<br>
+...@@···········@@@@··@·@·@@@·@··@·@@@@@...<br>
+..@@·@··········@@@·······@·@@@@@@@·@@@@@..<br>
+..@@@··············@@@@·······@@@@@·@@@@@..<br>
+..@·············@@@@@@@········@@@@@@@@@@..<br>
+.@@·············@@@@@@@@@@@@@@@@@@@@@@@@@@.<br>
+.@·············@@@@@@@@@@@@@@@·@@@@·@@@@@@.<br>
+.@············@@@@@@@@@@@@@@@@@·@@@··@@@@@.<br>
+.·············@@@@@@@@@@@@@@@@@·@@@@@··@@@.<br>
+.·············@@@@@@@@@@@@@@@@@@·@@@@···@@.<br>
+.·············@@@@@@@@@@@@@@@@@@·@@@@···@@.<br>
+.@···········@@@@@@@@@@@@@@@@@@@@·@·····@·.<br>
+.·············@@@@@@@@@@@@@@@@@@@@········.<br>
+.··············@@@@@@@@@@@@@@@@@@@@·······.<br>
+.···············@@@@·@@@@@@@@@@<span id="dot">@</span>@@@·······.<br>
+.······················@@@@@@@@@@@········.<br>
+..@@···················@@@@@@@@@@········..<br>
+..@@@··················@@@@@@@@@·········..<br>
+..@@@@·················@@@@@@@@@·········..<br>
+...@@@··················@@@@@@@@········...<br>
+...@@@@@················@@@@@@@@··@·····...<br>
+....@@@@@@·············@@@@@@@@@·@@····....<br>
+.....@@@@@·············@@@@@@@@··@····.....<br>
+.....@@@@···············@@@@@@@··@····.....<br>
+......@@@···············@@@@@@·······......<br>
+.......@················@@@@@·······.......<br>
+........·················@@@·······........<br>
+.........·························.........<br>
+...........·····················...........<br>
+.............·················.............<br>
+................···········................<br>
+...........................................<br>
+
       </div>
     </div>
 
@@ -302,14 +304,12 @@
     <script src="js/main.js"></script>
     <script>
       $(window).load(function () {
-        if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
-          $("#navibuttons, #loadfade, #world").remove();
-        }
-        else {
         $("#loadfade").addClass("loaded");
-        }
       });
       $(function() {
+        if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+          $("#navibuttons").remove();
+        }
         var s = skrollr.init({
           easing: {
             easeCustom: function(p) {
