link to pdf, less pink

--- a/index.html
+++ b/index.html
@@ -69,12 +69,10 @@
     </div> <!-- UNO -->
 
 <!-- nav -->
-    <div class="wrap" id="disc" data-300="opacity[cubic]:0;" data-600="opacity[cubic]:1;" data-900="opacity[cubic]:0">
-      <p>Please note that this displays the upcomming revision of the typeface still being fine tuned. Follow @andreaslarsendk for updates and/or download the "old" version.</p>
-    </div>
     <nav class="wrap" data-300="opacity[cubic]:0;" data-600="opacity[cubic]:1;" data-900="opacity[cubic]:0">
         <div id="get"><a href="https://github.com/gidole/Gidole-Typefaces/blob/master/gidole.zip?raw=true">Download</a></div>
         <div id="github"><a href="http://github.com/gidole/Gidole-Typefaces" target="_blank">Github</a></div>
+      <div id="pdf"><a href="https://github.com/gidole/Gidole-Typefaces/blob/master/Resources/GidoleFont/ReadMe+TestPrint.pdf?raw=true" target="_blank">pdf</a></div>
         <div id="share"><span id="shareTitle">Share</span><span id="shareSmile" class="invisible">:&#8198;)</span>
           <div class="links">
             <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fgidole.github.io%2F&text=Gidole%20%26%20Gidolinya%20Free%20Typefaces&original_referer=&via=andreaslarsendk&hashtags=gidole" target="_blank">Twitter</a><br>
@@ -272,7 +270,7 @@
     <div class="wrap forceforward inverted" data-7200="opacity[cubic]:0;" data-7600="opacity[cubic]:1">
       <div>
         <h2>The End</h2>
-        <p>Thanks for stopping by. Help me by reporting issues and ideas for <a href="http://github.com/gidole/Gidole-Typefaces/issues" target="_blank">font</a>/<a href="https://github.com/gidole/gidole.github.io/issues" target="_blank">website</a> and by spreading the word. <a href="https://twitter.com/intent/follow?screen_name=andreaslarsendk" target="_blank">Follow</a> me for updates.</p>
+        <p>Thanks for stopping by. Help me by reporting issues and ideas for <a href="http://github.com/gidole/Gidole-Typefaces/issues" target="_blank">font</a>/<a href="https://github.com/gidole/gidole.github.io/issues" target="_blank">website</a> and by spreading the word. <a href="https://twitter.com/intent/follow?screen_name=andreaslarsendk" target="_blank">Follow</a> me for updates. Please don't hesitate to contact me:)</p>
       </div>
     </div>
 
