--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
           return false;
         });
         $("#get").on("click touch", function() {
-//          window.location.href = 'https://github.com/gidole/Gidole-Typefaces/blob/master/gidole.zip?raw=true';
+          window.location.href = 'https://github.com/gidole/Gidole-Typefaces/blob/master/gidole.zip?raw=true';
           $("#thankyou").removeClass("invisible");
           return false;
         });
